--- a/.env.dist
+++ b/.env.dist
@@ -1,1 +1,7 @@
 VITE_API_URL=http://localhost:8000/api
+
+SECRET_KEY=
+DATABASE_URL=
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+REFRESH_TOKEN_EXPIRE_DAYS=30
